Add GameManager that listens to current active game and communicates with local chess engine
Delete GameEventProcessor due to logic duplication
Make API model classes public